Primer Resultado final del pryecto

--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
                 </div>
             </div>
         </section>
+        <aside>
+            <div class="wappFijo">
+                <img src="img/whatsappColor.png" alt="">
+            </div>
+        </aside>
 
         <footer class="bg-dark">
             <div class="boxFooter">
