--- a/k_horarios.html
+++ b/k_horarios.html
@@ -69,8 +69,8 @@
     </header>
 
     <main>
-        <section>
-            <div class="tablaDr">
+        <section class="horariosEnCelu">
+            <div id="consultorios" class="tablaDr">
                 <div>
                     <h2>Consultorios Externos: Horarios de atención.</h2>
                 </div>
@@ -135,10 +135,25 @@
                     </tbody>
                 </table>
             </div>
+            <div id="consultoriosCel">
+                <h2>Consultorios Externos</h2>
+                <h3>Horarios de atención</h3>
+                <p><strong>Médico Clínico</strong></p>
+                <span>Lun. a Vie. - 10:00 a 18:00</span>
+                <p><strong>Pediatras</strong></p>
+                <span>Lun. a Vie. - 08:00 a 19:00</span>
+                <p><strong>Otorrinos</strong></p>
+                <span>Lun. a Vie. - 10:00 a 17:00</span>
+                <p><strong>Traumatólogos</strong></p>
+                <span>Lun. a Vie. - 09:00 a 16:00</span>
+                <p><strong>Laboratorio</strong></p>
+                <span>Lun. a Vie. - 08:00 a 14:00</span>
+
+            </div>
         </section>
 
         <section>
-            <div class="tablaDr">
+            <div id="maternidad" class="tablaDr">
                 <div>
                     <h2>Maternidad e Internación: Horarios de visita.</h2>
                 </div>
