--- a/l_institucional.html
+++ b/l_institucional.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <div class="carousel-item carruselIndividual">
-                            <img src="img/camaAntigua.jpg" class="d-block w-100 imgCarrusel" alt="...">
+                            <img src="img/camasInternacion.jpg" class="d-block w-100 imgCarrusel" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Sala de internación</h5>
                                 <p>Fuimos pioneros en la ciudad, contando con 20 camas para internación.</p>
@@ -120,7 +120,7 @@
                 </div>
             </div>
         </section>
-        
+
         <footer class="bg-dark">
             <div class="boxFooter">
                 <div class="boxFooterTxt">
@@ -138,8 +138,7 @@
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
 </html>
-<!--  -->div>
-            </div>
+<!-- fin codigo -->           </div>
         </footer>
     </main>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
