Corrigiendo <link> de bootstrap en el head

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="clinica de atencion medica, especialistas en internacion maternidad y cardiologia">
     <meta name="keywords"  content="pediatra, pediatria, medico, clinico, analisis, consultorio, doctor, cardiologo, cardiologia">
-    <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,7 +91,7 @@
                         <h5 class="card-title">Especialistas</h5>
                         <p class="card-text">Si Ud. desea buscar un medico o especialista, puede ingresar desde aquí, y
                             seleccionar el profesional de su interes.</p>
-                        <a href="#" class="btn btn-dark">Cuerpo Médico</a>
+                        <a href="j_especialidades.html" class="btn btn-dark">Cuerpo Médico</a>
                     </div>
                 </div>
                 <div class="card bordes">
@@ -100,7 +100,7 @@
                         <h5 class="card-title">Horarios</h5>
                         <p class="card-text">Puede consultar los días y horarios de los consultorios externos, o conocer
                             los horarios de visita para internación, ingrese aquí.</p>
-                        <a href="#" class="btn btn-dark">Horarios</a>
+                        <a href="k_horarios.html" class="btn btn-dark">Horarios</a>
                     </div>
                 </div>
             </div>
