--- a/j_especialidades.html
+++ b/j_especialidades.html
@@ -8,7 +8,7 @@
     <meta name="description" content="clinica de atencion medica, especialidades medicas para atención de la salud">
     <meta name="keywords"
         content="pediatra, pediatria, medico, clinico, analisis, kinesiologia, cardiologo, cardiologia, obstetra">
-    <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
