--- a/m_contacto.html
+++ b/m_contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="clinica de atencion medica, contacto a traves de redes y formularios">
     <meta name="keywords"  content="pediatra, medico, clinico, analisis, consultorio, doctor, mail, contacto, telefono">
-    <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
