Agregando carpeta js para operar con inputs

--- a/index.html
+++ b/index.html
@@ -229,22 +229,23 @@
                 <img src="img/whatsappColor.png" alt="">
             </div>
         </aside>
-
-        <footer class="bg-dark">
-            <div class="boxFooter">
-                <div class="boxFooterTxt">
-                    <span>Derechos reservados - Cllínica JMR - 2021</span>
-                </div>
-                <div class="boxFooterImg">
-                    <img class="imgFooter" src="img/facebook.png" alt="">
-                    <img class="imgFooter" src="img/instagram.png" alt="">
-                    <img class="imgFooter" src="img/linkedin.png" alt="">
-                    <img class="imgFooter" src="img/twitter.png" alt="">
-                </div>
-            </div>
-        </footer>
     </main>
+    <footer class="bg-dark">
+        <div class="boxFooter">
+            <div class="boxFooterTxt">
+                <span>Derechos reservados - Cllínica JMR - 2021</span>
+            </div>
+            <div class="boxFooterImg">
+                <img class="imgFooter" src="img/facebook.png" alt="">
+                <img class="imgFooter" src="img/instagram.png" alt="">
+                <img class="imgFooter" src="img/linkedin.png" alt="">
+                <img class="imgFooter" src="img/twitter.png" alt="">
+            </div>
+        </div>
+    </footer>
+    
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
+    <script src="js/codigojs.js"></script>
 </body>
 </html>
 <!--  -->
