--- a/m_contacto.html
+++ b/m_contacto.html
@@ -71,26 +71,26 @@
     <main>
         <section>
             <div class="cajaCarrusel">
-                <form class="row g-3">
+                <form id="formularioContacto" class="row g-3">
                     <div class="col-md-6">
-                      <label for="inputEmail4" class="form-label">Nombre</label>
-                      <input type="text" class="form-control" id="inputEmail4">
+                      <label for="inputNombre" class="form-label">Nombre</label>
+                      <input type="text" class="form-control" id="inputNombre">
                     </div>
                     <div class="col-md-6">
-                      <label for="inputPassword4" class="form-label">Apellido</label>
-                      <input type="text" class="form-control" id="inputPassword4">
+                      <label for="inputApellido" class="form-label">Apellido</label>
+                      <input type="text" class="form-control" id="inputApellido">
                     </div>
                     <div class="col-md-6">
-                      <label for="inputAddress" class="form-label">Obra Social/Prepaga</label>
-                      <input type="text" class="form-control" id="inputAddress" placeholder="Ej. Swiss Medical">
+                      <label for="inputO_Social" class="form-label">Obra Social/Prepaga</label>
+                      <input type="text" class="form-control" id="inputO_Social" placeholder="Ej. Swiss Medical">
                     </div>
                     <div class="col-md-6">
-                      <label for="inputAddress2" class="form-label">Edad</label>
-                      <input type="number" class="form-control" id="inputAddress2" placeholder="21">
+                      <label for="inputEdad" class="form-label">Edad</label>
+                      <input type="number" class="form-control" id="inputEdad" placeholder="21">
                     </div>
                     <div class="col-md-6">
-                      <label for="inputCity" class="form-label">N° Celular/fijo</label>
-                      <input type="text" class="form-control" id="inputCity">
+                      <label for="inputCelContacto" class="form-label">N° Celular/fijo</label>
+                      <input type="text" class="form-control" id="inputCelContacto">
                     </div>
                     <div class="col-md-6">
                       <label for="inputState" class="form-label">Horario de Contacto</label>
@@ -115,24 +115,22 @@
                   </form>
             </div>        
         </section>
-        <section>
-            
-        </section>
-        <footer class="bg-dark">
-            <div class="boxFooter">
-                <div class="boxFooterTxt">
-                    <span>Derechos reservados - Cllínica JMR - 2021</span>
-                </div>
-                <div class="boxFooterImg">
-                    <img class="imgFooter" src="img/facebook.png" alt="">
-                    <img class="imgFooter" src="img/instagram.png" alt="">
-                    <img class="imgFooter" src="img/linkedin.png" alt="">
-                    <img class="imgFooter" src="img/twitter.png" alt="">
-                </div>
-            </div>
-        </footer>
     </main>
+    <footer class="bg-dark">
+        <div class="boxFooter">
+            <div class="boxFooterTxt">
+                <span>Derechos reservados - Cllínica JMR - 2021</span>
+            </div>
+            <div class="boxFooterImg">
+                <img class="imgFooter" src="img/facebook.png" alt="">
+                <img class="imgFooter" src="img/instagram.png" alt="">
+                <img class="imgFooter" src="img/linkedin.png" alt="">
+                <img class="imgFooter" src="img/twitter.png" alt="">
+            </div>
+        </div>
+    </footer>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
+    <script src="js/codigojs.js"></script>
 </body>
 </html>
 <!--  -->
