--- a/m_contacto.html
+++ b/m_contacto.html
@@ -112,6 +112,7 @@
     </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
+    <script src="js/arraysYobjetos.js"></script>
     <script src="js/funciones.js"></script>
     <script src="js/codigojs.js"></script>
 </body>
