cambiar pagina contacto por registrar usuario, generar logueo en especialista

--- a/j_especialidades.html
+++ b/j_especialidades.html
@@ -37,19 +37,19 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./index.html">inicio</a>
+                                    <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./j_especialidades.html">Especialistas</a>
+                                    <a class="nav-link" href="j_especialidades.html">Especialistas</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./k_horarios.html">Horarios</a>
+                                    <a class="nav-link" href="k_horarios.html">Horarios</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./l_institucional.html">Institucional</a>
+                                    <a class="nav-link" href="l_institucional.html">Institucional</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./m_contacto.html">Contacto</a>
+                                    <a class="nav-link" href="m_RegistrarUsuario.html">Nuevo Usuario</a>
                                 </li>
                             </ul>
                         </div>
@@ -70,20 +70,29 @@
     </header>
     <main>
         <section>
+            <form action="" id="formularioUsuarioRegistrado">
+                <label for="IngesarDni" class="form-label">Ingrese su DNI</label>
+                <input type="number" required type="number" class="form-control" id="IngesarDni">
+
+                <label for="ingresarApellido" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="ingresarApellido">
+            </form>
+        </section>
+        <section>
             <div class="subtitulos2">
                 <h2>Busqueda por especialidad</h2>
             </div>
             <div class="listaDoc">
                 <div class="list-group">
-                    <a href="#clinicaMedica" class="list-group-item list-group-item-action" aria-current="true">Clínica
-                        Médica</a>
-                    <a href="#cardiologia" class="list-group-item list-group-item-action">Cardiología</a>
-                    <a href="#cirugia" class="list-group-item list-group-item-action">Cirugía</a>
-                    <a href="#ginecologia" class="list-group-item list-group-item-action">Ginecología</a>
-                    <a href="#kinesiologia" class="list-group-item list-group-item-action">Kinesiología</a>
-                    <a href="#odontologia" class="list-group-item list-group-item-action">Odontología</a>
-                    <a href="#pediatria" class="list-group-item list-group-item-action">Pediatría</a>
-                    <a href="#psicologia" class="list-group-item list-group-item-action">Psicología</a>
+                    <a href="" class="list-group-item list-group-item-action">Clínica Médica</a>
+                    <a href="" class="list-group-item list-group-item-action">Cardiología</a>
+                    <a href="" class="list-group-item list-group-item-action">Cirugía</a>
+                    <a href="" class="list-group-item list-group-item-action">Dermatología</a>
+                    <a href="" class="list-group-item list-group-item-action">Ginecología</a>
+                    <a href="" class="list-group-item list-group-item-action">Nutricionista</a>
+                    <a href="" class="list-group-item list-group-item-action">Odontología</a>
+                    <a href="" class="list-group-item list-group-item-action">Pediatría</a>
+                    <a href="" class="list-group-item list-group-item-action">Traumatología</a>
                 </div>
                 <div class="imgRedSocial">
                     <img src="img/doctor.png" alt="">
@@ -348,21 +357,21 @@
                 </div>
             </div>
         </section>
+    </main>
 
-        <footer class="bg-dark">
-            <div class="boxFooter">
-                <div class="boxFooterTxt">
-                    <span>Derechos reservados - Cllínica JMR - 2021</span>
-                </div>
-                <div class="boxFooterImg">
+    <footer class="bg-dark">
+        <div class="boxFooter">
+            <div class="boxFooterTxt">
+                <span>Derechos reservados - Cllínica JMR - 2021</span>
+            </div>
+            <div class="boxFooterImg">
                     <img class="imgFooter" src="img/facebook.png" alt="">
                     <img class="imgFooter" src="img/instagram.png" alt="">
                     <img class="imgFooter" src="img/linkedin.png" alt="">
                     <img class="imgFooter" src="img/twitter.png" alt="">
-                </div>
             </div>
-        </footer>
-    </main>
+        </div>
+    </footer>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
 
