--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./index.html">inicio</a>
+                                    <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./j_especialidades.html">Especialistas</a>
+                                    <a class="nav-link" href="j_especialidades.html">Especialistas</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./k_horarios.html">Horarios</a>
+                                    <a class="nav-link" href="k_horarios.html">Horarios</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./l_institucional.html">Institucional</a>
+                                    <a class="nav-link" href="l_institucional.html">Institucional</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./m_contacto.html">Contacto</a>
+                                    <a class="nav-link" href="m_RegistrarUsuario.html">Nuevo Usuario</a>
                                 </li>
                             </ul>
                         </div>
