Actualizar para subir a githib

--- a/j_especialidades.html
+++ b/j_especialidades.html
@@ -74,8 +74,10 @@
                 <label for="IngesarDni" class="form-label">Ingrese su DNI</label>
                 <input type="number" required type="number" class="form-control" id="IngesarDni">
 
-                <label for="ingresarApellido" class="form-label">Apellido</label>
+                <label for="ingresarApellido" class="form-label">Ingrese su Apellido</label>
                 <input type="text" class="form-control" id="ingresarApellido">
+
+                <button type="submit" class="btn btn-primary">Presione para entrar</button>
             </form>
         </section>
         <section>
